--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@reduxjs/toolkit": "^2.8.1",
     "primereact": "^10.9.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
